--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-front-end",
   "version": "0.1.0",
   "private": true,
+  "main": "electron.js",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
@@ -14,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron-start": "electron .",
+    "electron-build": "react-scripts build && electron ."
   },
   "eslintConfig": {
     "extends": [
@@ -33,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^34.0.2"
   }
 }
