--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "electron.js",
   "dependencies": {
     "cra-template": "1.2.0",
+    "framer-motion": "^12.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "wavesurfer.js": "^7.9.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
